# qmk-nix

./: .gitignore  README.md  flake.nix  qmk-nix.cabal
app/: Codegen.hs
firmware-stub/: config.h  qmk_nix_indicators.c  qmk_nix_raw_hid.c  qmk_nix_slots.c  qmk_nix_slots.h  qmk_nix_wireless_fallback.c
host/cogcast-q0/: Cargo.toml
host/cogcast-q0/nix/: package.nix
host/cogcast-q0/src/: bridge.rs  config.rs  events.rs  focus.rs  hid.rs  keymap.rs  main.rs
nix/: home-manager-cogcast-q0.nix  lib.nix
src/QmkNix/: Keycodes.hs  LayerLayout.hs  Resolve.hs  Types.hs
src/QmkNix/Plugins/: Cogcast.hs  Default.hs  Registry.hs
src/QmkNix/Plugins/Apps/: Illustrator.hs
src/QmkNix/Plugins/Categories/: DesignTools.hs
src/QmkNix/Positions/: Q0MaxEncoder.hs
src/QmkNix/Render/: Common.hs  InitLua.hs  KeymapC.hs  LayersH.hs  RulesMk.hs
tests/: Spec.hs
tests/golden/cogcast-illustrator/: keymap.c  qmk_nix_layers.h  rules.mk
tests/golden/illustrator/: init.lua  keymap.c  qmk_nix_layers.h  rules.mk
